fix navbar gap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,7 +5,6 @@
   display: none;
 }
 
-
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
@@ -22,8 +21,10 @@ html {
   overflow-y: scroll;
 }
 
+@media (min-width: 981px) {
 body {
   padding-top: 60px;
+}
 }
 
 section {
